Added the basic foreground layout on the smallest viewport

--- a/index.html
+++ b/index.html
@@ -8,6 +8,58 @@
     <title>Larger | 5 start Blog Platform</title>
   </head>
   <body>
-    <div class="backdrop"></div>
+    <div class="backdrop">
+      <section class="layout">
+        <section class="hero">
+          This is larger
+        </section>
+
+        <section class="articles">
+          <article class="blog">
+            Blog 1
+          </article>
+
+          <article class="blog">
+            Blog 2
+          </article>
+
+          <article class="blog">
+            Blog 3
+          </article>
+
+          <article class="blog">
+            Blog 4
+          </article>
+
+          <article class="blog">
+            Blog 5
+          </article>
+
+          <article class="blog">
+            Blog 6
+          </article>
+
+          <article class="blog">
+            Blog 7
+          </article>
+        </section>
+
+        <section class="next">
+          <button class="next__btn">Next</button>
+        </section>
+
+        <form class="form">
+          Form
+        </form>
+
+        <section class="contact">
+          Contact
+        </section>
+
+        <footer class="footer">
+          Footer
+        </footer>
+      </section>
+    </div>
   </body>
 </html>
